--- a/css/styles.css
+++ b/css/styles.css
@@ -228,7 +228,7 @@
 
  .card-title-view {
      background-color: #FFFFFF;
-     width: calc((100% - 72px) / 4);
+     width: calc((100% - 3 * 24px) / 4);
      border-radius: 0px 0px 4px 4px;
 
 
