--- a/css/styles.css
+++ b/css/styles.css
@@ -10,6 +10,8 @@
 
  ul {
      list-style: none;
+     padding: 0;
+     margin: 0;
  }
 
  img {
@@ -32,7 +34,8 @@
      display: flex;
      width: 1158px;
      margin: 0 auto;
-     padding: 0 15px 0 15px;
+     padding-left: 15px;
+     padding-right: 15px;
  }
 
 
@@ -125,13 +128,17 @@
 
  .data-team-container-menu {
      display: flex;
+     margin-bottom: 0;
+     margin-top: 0;
      gap: 24px;
-     margin-right: 0;
+
 
  }
 
  .data-team-container-menu-title {
      width: calc((100% - 72px) / 4);
+
+
  }
 
 
@@ -219,7 +226,7 @@
 
  }
 
- .person-data-container {
+ .card-title-data {
      padding-top: 32px;
      padding-bottom: 32px;
 
@@ -228,7 +235,7 @@
 
  .card-title-view {
      background-color: #FFFFFF;
-     width: calc((100% - 3 * 24px) / 4);
+     width: calc((100% - 72px) / 4);
      border-radius: 0px 0px 4px 4px;
 
 
@@ -334,4 +341,14 @@
  .title-card {
      padding-top: 120px;
      padding-bottom: 120px;
+ }
+
+ .project-card-view-portfolio {
+     width: calc((100% - 48px) / 3);
+ }
+
+ .project-card-title-data {
+     padding: 32px 16px;
+     border: 1px solid #e7e9fc;
+     border-top: none;
  }
