--- a/css/styles.css
+++ b/css/styles.css
@@ -6,6 +6,7 @@
 
  a {
      text-decoration: none;
+
  }
 
  ul {
@@ -31,7 +32,7 @@
  }
 
  .container {
-     display: flex;
+
      width: 1158px;
      margin: 0 auto;
      padding-left: 15px;
@@ -185,19 +186,22 @@
      color: #4d5ae5;
      margin-right: 76px;
 
+
  }
 
  .link-logo-name-view {
-     color: #f4f4fd
+     color: #f4f4fd;
+
  }
 
  .link-logo-name {
      color: #2e2f42;
-     ;
+
  }
 
  .adress-social-links {
      font-style: normal;
+
 
  }
 
@@ -307,7 +311,7 @@
      padding: 32px 16px;
      border: 1px solid #e7e9fc;
      border-top: none;
-     width: calc((100% - 48px) / 3);
+     width: calc((100% - 72px) / 3);
  }
 
  .data-view {
