--- a/css/styles.css
+++ b/css/styles.css
@@ -29,6 +29,7 @@
 
  .cotainer {
      border-bottom: 1px solid #e7e9fc;
+
  }
 
  .container {
@@ -37,6 +38,9 @@
      margin: 0 auto;
      padding-left: 15px;
      padding-right: 15px;
+
+
+
  }
 
 
@@ -150,6 +154,10 @@
 
  }
 
+ .cont {
+     display: flex;
+     gap: 332px;
+ }
 
  .social-links {
      font-size: 16px;
