--- a/css/styles.css
+++ b/css/styles.css
@@ -73,6 +73,8 @@
      text-align: center;
      color: #fff;
      max-width: 496px;
+     display: block;
+     margin: auto;
  }
 
  .main-page-buttom {
@@ -90,6 +92,9 @@
      height: 56px;
      border: none;
      border-radius: 4px;
+     margin: auto;
+     margin-top: 48px;
+
  }
 
  .main-page-buttom:hover,
@@ -126,6 +131,7 @@
      margin-right: 0;
      padding-top: 24px;
      padding-bottom: 24px;
+     display: block;
  }
 
  .data-team {
@@ -166,16 +172,25 @@
      display: flex;
      gap: 40px;
      margin-right: 0;
+     padding-left: 332px;
 
  }
 
+ .address-links {
+     padding-top: 24px;
+     padding-bottom: 24px;
 
+
+ }
 
  .social-links {
      font-size: 16px;
      line-height: 1.5;
      letter-spacing: 0.02em;
      color: #434455;
+
+
+
  }
 
 
@@ -221,6 +236,7 @@
 
  .adress-social-links {
      font-style: normal;
+     display: block;
 
 
  }
